# docs/swagger.json
@@ -249,6 +249,57 @@
                 }
             }
         },
+        "/v1/measurement": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Measurement"
+                ],
+                "summary": "Get measurement",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/handler.MeasurementResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/utils.HttpResponse"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/utils.HttpResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/utils.HttpResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/utils.HttpResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/roles": {
             "get": {
                 "consumes": [
@@ -596,6 +647,66 @@
                 }
             }
         },
+        "/v1/users/analysis/{id}": {
+            "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Analysis"
+                ],
+                "summary": "Delete user analysis",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content",
+                        "schema": {
+                            "$ref": "#/definitions/utils.HttpResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/utils.HttpResponse"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/utils.HttpResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/utils.HttpResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/utils.HttpResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/users/cortisol/latest": {
             "get": {
                 "security": [
@@ -868,6 +979,66 @@
                             "items": {
                                 "$ref": "#/definitions/model.UserDiaryMoodJSON"
                             }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/utils.HttpResponse"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/utils.HttpResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/utils.HttpResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/utils.HttpResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/users/diary/{id}": {
+            "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "UserDiary"
+                ],
+                "summary": "Delete user diary",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content",
+                        "schema": {
+                            "$ref": "#/definitions/utils.HttpResponse"
                         }
                     },
                     "401": {
@@ -1367,9 +1538,234 @@
                     }
                 }
             }
+        },
+        "/v1/version": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Version"
+                ],
+                "summary": "Get version",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/handler.Version"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/utils.HttpResponse"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/utils.HttpResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/utils.HttpResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/utils.HttpResponse"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
+        "handler.MeasurementResponse": {
+            "type": "object",
+            "properties": {
+                "mood": {
+                    "type": "object",
+                    "$ref": "#/definitions/handler.MoodResponse"
+                },
+                "sleep": {
+                    "type": "object",
+                    "$ref": "#/definitions/handler.SleepResponse"
+                },
+                "steps": {
+                    "type": "object",
+                    "$ref": "#/definitions/handler.StepResponse"
+                },
+                "stress": {
+                    "type": "object",
+                    "$ref": "#/definitions/handler.StressResponse"
+                }
+            }
+        },
+        "handler.Mood": {
+            "type": "object",
+            "properties": {
+                "count": {
+                    "type": "integer"
+                },
+                "mood": {
+                    "type": "string"
+                }
+            }
+        },
+        "handler.MoodMeasurement": {
+            "type": "object",
+            "properties": {
+                "moods": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/handler.Mood"
+                    }
+                }
+            }
+        },
+        "handler.MoodResponse": {
+            "type": "object",
+            "properties": {
+                "month": {
+                    "type": "object",
+                    "$ref": "#/definitions/handler.MoodMeasurement"
+                },
+                "today": {
+                    "type": "object",
+                    "$ref": "#/definitions/handler.MoodMeasurement"
+                },
+                "week": {
+                    "type": "object",
+                    "$ref": "#/definitions/handler.MoodMeasurement"
+                }
+            }
+        },
+        "handler.SleepMeasurement": {
+            "type": "object",
+            "properties": {
+                "rem": {
+                    "type": "integer"
+                },
+                "timestamp": {
+                    "type": "string"
+                },
+                "ttb": {
+                    "type": "integer"
+                }
+            }
+        },
+        "handler.SleepResponse": {
+            "type": "object",
+            "properties": {
+                "month": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/handler.SleepMeasurement"
+                    }
+                },
+                "today": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/handler.SleepMeasurement"
+                    }
+                },
+                "week": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/handler.SleepMeasurement"
+                    }
+                }
+            }
+        },
+        "handler.StepMeasurement": {
+            "type": "object",
+            "properties": {
+                "timestamp": {
+                    "type": "string"
+                },
+                "value": {
+                    "type": "number"
+                }
+            }
+        },
+        "handler.StepResponse": {
+            "type": "object",
+            "properties": {
+                "month": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/handler.StepMeasurement"
+                    }
+                },
+                "today": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/handler.StepMeasurement"
+                    }
+                },
+                "week": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/handler.StepMeasurement"
+                    }
+                }
+            }
+        },
+        "handler.StressMeasurement": {
+            "type": "object",
+            "properties": {
+                "normal": {
+                    "type": "integer"
+                },
+                "stress": {
+                    "type": "integer"
+                },
+                "timestamp": {
+                    "type": "string"
+                }
+            }
+        },
+        "handler.StressResponse": {
+            "type": "object",
+            "properties": {
+                "month": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/handler.StressMeasurement"
+                    }
+                },
+                "today": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/handler.StressMeasurement"
+                    }
+                },
+                "week": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/handler.StressMeasurement"
+                    }
+                }
+            }
+        },
+        "handler.Version": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string"
+                },
+                "url": {
+                    "type": "string"
+                }
+            }
+        },
         "model.AccessTokenJSON": {
             "type": "object",
             "properties": {
