# handler/analysis.go
@@ -4,6 +4,7 @@ import (
 	"github.com/aoffy-kku/minemind-backend/model"
 	"github.com/aoffy-kku/minemind-backend/utils"
 	"github.com/labstack/echo/v4"
+	"go.mongodb.org/mongo-driver/bson/primitive"
 	"net/http"
 	"strconv"
 	"time"
@@ -116,3 +117,32 @@ func (h *Handler) GetAnalysisByMode(c echo.Context) error {
 	return utils.EchoHttpResponse(c, http.StatusOK, result)
 }
 
+// DeleteAnalysis godoc
+// @tags Analysis
+// @Summary Delete user analysis
+// @Accept  json
+// @Produce  json
+// @Param id path string true "id"
+// @Success 204 {object} utils.HttpResponse
+// @Failure 401 {object} utils.HttpResponse
+// @Failure 403 {object} utils.HttpResponse
+// @Failure 404 {object} utils.HttpResponse
+// @Failure 500 {object} utils.HttpResponse
+// @Router /v1/users/analysis/{id} [delete]
+// @Security ApiKeyAuth
+func (h *Handler) DeleteAnalysis(c echo.Context) error {
+	uid := c.Get("id").(string)
+	id := c.Param("id")
+	oid, err := primitive.ObjectIDFromHex(id)
+	if err != nil {
+		return utils.EchoHttpResponse(c, http.StatusBadRequest, utils.HttpResponse{
+			Message: "invalid id",
+		})
+	}
+	if err := h.analysisService.DeleteAnalysis(oid, uid); err != nil {
+		return utils.EchoHttpResponse(c, http.StatusInternalServerError, utils.HttpResponse{
+			Message: err.Error(),
+		})
+	}
+	return utils.EchoHttpResponse(c, http.StatusOK, utils.HttpResponse{})
+}
